# wwhatis

./: .gitignore  Cargo.toml  README.md  about.hbs  about.toml  build.sh  flake.nix
.githooks/: pre-commit
.github/workflows/: cargoabout.yml
src/: main.rs
src/helpers/: convert.rs  help.rs  mod.rs
src/model/: mod.rs  summary_response.rs
src/utils/: args.rs  cli.rs  convert.rs  mod.rs  open.rs
