[package]
name = "wwhatis-rs"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wwhatis"
path = "src/main.rs"

[profile.release]
# this will decrease binary size, but you have to disable it for cargo-bloat to work.
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
crossterm = "0.25.0"
dont_disappear = "3.0.1"
futures = "0.3.21"
hyper = { version = "0.14.20", features = ["client", "http1"] }
hyper-tls = "0.5.0"
spinners = "4.1.0"
tokio = { version = "1.20.1", features = ["full"] }
urlencoding = "2.1.0"
json = "0.12.4"
